--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
 <script>
-    var místo = (prompt("vyberte si kam by jste radši jeli Anglie, Amerika, Francie"))
-    if(místo=="Anglie" ){
-        alert("Anglie je dobrá volba")
-        
-    }
-    if(místo=="Amerika" ) {
-        alert("Amrika je dobrá volba")
-    }
-    if(místo=="Francie") {
-        alert("Francie je dobrá volba")
-    }
-    else{"to nebyla možnost"}
+
+var a 
+a = prompt("zadejte číslo hodin")
+alert(a+"hodin se rovná"+a*60+"minut")
+    
 
 
-    var zvíře1 = prompt("zadejte svoje první oblíbené zvíře")    
-    var zvíře2 = prompt("zadejte svoje druhé oblíbené zvíře")
-    var zvíře3 = prompt("zadejte svoje třetí oblíbené zvíře")
-    if(zvíře1=="plameňák") {
-        alert("plameňák je super")
-    }
+var b
+b = prompt ("zadejte teplotu v celziech")
+alert (b+"stupňů celzius je "+(b*9/5)+32+"faranhaitů")
+
+
+
+var c
+var d
+var e
+c = prompt ("zadejte číslo")
+d = prompt ("zadejte druhé čísloL")
+e = prompt ("zadejte poslední číslo")
+console.log ("průměr těcdhto čísel je"+(c+d+e)/3)
+
+
+var p
+p = prompt ("zadejte vzdálenost v metrech")
+alert ("vaše vzdálenost je"+p/1000)
+
+
+
+
+a = Number 
+b = Number 
+c = Number 
+d = Number 
+e = Number 
+p = Number 
+
 
 
 </script>
